# knobbie

./: README.md  conftest.py  constants.py  main.py  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: app.yml  sonar-cube.yml
modules/: builder.py  enums.py
modules/builders/: __init__.py  knob_builder.py  strip_builder.py
modules/entities/: __init__.py  builder.py  knob.py  strip.py
modules/interfaces/: saver.py  strip.py
tests/: test_builder.py  test_main.py
tests/builders/: test_knob_strip_builder.py  test_strip_builder.py
tests/fixtures/: common.py  factories.py
